[package]
name = "crazy_flie"
version = "0.1.0"
authors = ["Michiel van den Brink <michielaiso@hotmail.com>"]
description = "Board support crate for the CrazyFlie dron by Bitwise"
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f405"]
version = "0.6.0"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
